# sb-capture-browser

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/data/: bookmark.rs
