[package]
name = "sb-capture-browser"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 3
debug = false
debug-assertions = false

[dependencies]
notify = "5.0.0"
clap = { version = "4.0.29", features = ["cargo"] }
tokio = { version = "1.23", features = ["sync", "rt", "macros", "rt-multi-thread", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"